--- a/UFrameCliente.fmx
+++ b/UFrameCliente.fmx
@@ -115,7 +115,7 @@ object FrameCliente: TFrameCliente
       Size.PlatformDefault = False
       WrapMode = Center
     end
-    object Label1: TLabel
+    object LabelNome: TLabel
       Anchors = [akLeft, akTop, akRight]
       StyledSettings = [Size, FontColor]
       Position.X = 57.000000000000000000
@@ -128,7 +128,7 @@ object FrameCliente: TFrameCliente
       Text = 'Nome do cliente'
       TabOrder = 4
     end
-    object Label2: TLabel
+    object LabelEmail: TLabel
       Anchors = [akLeft, akTop, akRight]
       StyledSettings = [Size, FontColor]
       Position.X = 57.000000000000000000
